# multithreading-game

./: .gitignore  CMakeLists.txt  README.md  client.h  client_struct.h  curses.cpp  game_client.cpp  game_client.h  game_server.cpp  game_server.h  makefile  point.h
